<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txt_nombre_de_cuenta_mod"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="77dp"
                android:layout_marginTop="40dp"
                android:text="@string/txt_nombre_de_cuenta"
                android:textColor="#673AB7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="100dp"
                android:text="@string/txt_saldo"
                android:textColor="@color/black"
                android:textSize="21dp"
                />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="140dp"
                android:text="@string/txt_simbol_money"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="190dp"
                android:text="@string/txt_tipo_de_cuenta"
                android:textColor="@color/black"
                android:textSize="21dp"
                />

            <TextView
                android:id="@+id/txt_saldomony_mod"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginTop="140dp"
                android:text="@string/txt_saldo_mod"
                android:textColor="#58F31F"
                android:textSize="28dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_tipo_cuenta_mod"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="180dp"
                android:layout_marginTop="220dp"
                android:text="@string/txt_cuenta_de_ahorros"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="185dp"
                android:layout_height="62dp"
                android:text="@string/bnt_editar_text"
                android:layout_marginHorizontal="210dp"
                android:layout_marginTop="290dp"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="185dp"
                android:layout_height="62dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="290dp"
                android:text="@string/bnt_eliminar_text"
                android:textColor="@color/my_primary_color"
                android:textColorLink="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/Widget.Material3.Button.ElevatedButton"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>